# OpenCvExamples

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  conanfile.py
apps/: .CMakeLists.txt.swp  .resize_window_qt.cpp.swp  .trackbar_control_panel.cpp.swp  CMakeLists.txt  calibration.cpp  compare_circle_function.cpp  delaunay_gps.cpp  imagelist_creator.cpp  keypoint_selection_sdc.cpp  linearscale.cpp  linearscale.h  read_multipage_tiff.cpp  resize_window_qt.cpp  trackbar_control_panel.cpp  visual_odometry.cpp
cmake_stuff/: compileroptions.cmake  findDependencies.cmake  options.cmake  printInfo.cmake
data/: gps_positions_frienisber.csv  gps_positions_myflight1.csv
scripts/: pykitty_odometry.py  visualize_poses.py
